<resources>
    <string name="app_name">Game Key Prices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Game Key Prices</string>
    <string name="nav_header_subtitle">track price history of favourite games</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_favorites">Favorites</string>
    <string name="menu_deals">Deals</string>
    <string name="menu_search">Search</string>

    <string name="menu_spotlight">Spotlight</string>
    <string name="menu_action">Action</string>
    <string name="menu_adventure">Adventure</string>
    <string name="menu_fps">FPS</string>
    <string name="menu_horror">Horror</string>
    <string name="menu_management">Management</string>
    <string name="menu_mmo">MMO</string>
    <string name="menu_racing">Racing</string>
    <string name="menu_rpg">RPG</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_strategy">Strategy</string>

    <string name="you">YOU</string>
    <string name="track">TRACK</string>
    <string name="heartlogo">heartLogo</string>
    <string name="url">itad.docs.apiary.io</string>

    <string name="game_title">Game Title</string>
    <string name="historic_low">LOW</string>
    <string name="actual_price">NOW</string>
    <string name="historic_low_value">0.00</string>
    <string name="actual_price_value">0.00</string>
    <string name="cheapest_shop_now">cheapest shop now</string>

    <string name="price_old">OLD</string>
    <string name="price_old_value">0.00</string>
    <string name="price_new_value">0.00</string>
    <string name="price_new">NEW</string>
    <string name="shop_deal">Shop</string>
    <string name="expire">TILL</string>
    <string name="expire_value">DD.MM.YYYY</string>
    <string name="cut">CUT</string>
    <string name="cut_value">000%</string>

    <string name="search_for_game">Query</string>
    <string name="home_second">Home Second</string>
</resources>
