<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_menu_recent"
            android:title="@string/menu_recent" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"/>

        <item
            android:color="@color/colorWhite"
            android:title="@string/menu_category"
            android:id="@+id/nav_category">

            <menu>
                <item
                    android:id="@+id/nav_action"
                    android:title="@string/menu_action" />
                <item
                    android:id="@+id/nav_adventure"
                    android:title="@string/menu_adventure" />
                <item
                    android:id="@+id/nav_fps"
                    android:title="@string/menu_fps" />
                <item
                    android:id="@+id/nav_horror"
                    android:title="@string/menu_horror" />
                <item
                    android:id="@+id/nav_management"
                    android:title="@string/menu_management" />
                <item
                    android:id="@+id/nav_mmorpg"
                    android:title="@string/menu_mmorpg" />
                <item
                    android:id="@+id/nav_racing"
                    android:title="@string/menu_racing" />
                <item
                    android:id="@+id/nav_rpg"
                    android:title="@string/menu_rpg" />
                <item
                    android:id="@+id/nav_sports"
                    android:title="@string/menu_sports" />
                <item
                    android:id="@+id/nav_strategy"
                    android:title="@string/menu_strategy" />
            </menu>
        </item>

    </group>
</menu>
