<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="356dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="20dp"
        app:cardBackgroundColor="@color/colorBackgroundDark"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ViewAnimator
                android:id="@+id/split_card_view2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/darker_gray"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/game_title_deals"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/game_title"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardviewdeals" />

            <TextView
                android:id="@+id/shop"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:autoLink="web"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/shop_deal"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/game_title_deals" />

            <TextView
                android:id="@+id/price_old_value"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/price_old_value"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toStartOf="@+id/price_old"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shop" />

            <TextView
                android:id="@+id/price_old"
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/price_old"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/split_card_view2"
                app:layout_constraintTop_toBottomOf="@+id/shop" />

            <TextView
                android:id="@+id/price_new"
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/price_new"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/split_card_view2"
                app:layout_constraintTop_toBottomOf="@+id/shop" />

            <TextView
                android:id="@+id/price_new_value"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/price_new_value"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/price_new"
                app:layout_constraintTop_toBottomOf="@+id/shop" />

            <TextView
                android:id="@+id/cut"
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/cut"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/split_card_view2"
                app:layout_constraintTop_toBottomOf="@+id/price_new" />

            <TextView
                android:id="@+id/cut_value"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/cut_value"
                android:textColor="@android:color/holo_green_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cut"
                app:layout_constraintTop_toBottomOf="@+id/price_new_value" />

            <TextView
                android:id="@+id/expire"
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/expire"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/split_card_view2"
                app:layout_constraintTop_toBottomOf="@+id/price_old" />

            <TextView
                android:id="@+id/expire_value"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/expire_value"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/expire"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/price_old_value" />

            <TextView
                android:id="@+id/url_field"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autoLink="web"
                android:clickable="true"
                android:gravity="center"
                android:textColorLink="@android:color/transparent"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/shop"
                app:layout_constraintEnd_toEndOf="@+id/shop"
                app:layout_constraintStart_toStartOf="@+id/shop"
                app:layout_constraintTop_toTopOf="@+id/shop" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewdeals"
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/game_image_deals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_image_placeholder" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/fav_button_deal"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/fav_icon_unchecked"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>